# django_project

./: .dockerignore  .env.example  .gitignore  DATABASE.md  DATABASE_OWNERSHIP.md  DEBUG_DJANGO_CONTAINER.md  DOCKER_COMMANDS.md  Dockerfile  LICENSE.txt  LINUX_COMMANDS.md  README.md  datadump.json  db.sqlite3  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
blog/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: main.css  script.js
blog/templates/: 404.html
blog/templates/blog/: about.html  announcements.html  base.html  calendar.html  database_ownership.html  debug_django_container.html  docker_commands.html  home.html  index.html  latest_posts.html  post_confirm_delete.html  post_detail.html  resources.html  user_posts.html
globalstaticfiles/: global.css
mysite/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
