[tool.poetry]
name = "django-project"
version = "0.1.0"
description = "Django blog web application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.10"
pillow = "^12.1.0"
dotenv = "^0.9.9"
markdown = "^3.10"
psycopg2 = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
