[tool.poetry]
name = "django-project"
version = "0.1.0"
description = "Django blog web application"
authors = ["SystemSolution21 <systemsolution21@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.10"
pillow = "^12.1.0"
python-dotenv = "^1.0.1"
markdown = "^3.10"
whitenoise = "^6.11.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
